--- a/app_server/views/anasayfa.pug
+++ b/app_server/views/anasayfa.pug
@@ -19,16 +19,18 @@ block content
         span.glyphicon.glyphicon-star
         span.glyphicon.glyphicon-star-empty 
       span.badge.pull-right.badge-default 1km 
-      p.address SDÜ Batı Kampüsü
+      p.address Centrum Garden AVM
       p 
-        span.label.label-warning Mühendis Gençler
-        | &nbsp;
-        span.label.label-warning Mühendis Gençler
+        span.label.label-warning Dünya Kahveleri
+        | &nbsp;  
+        span.label.label-warning Kekler 
+        | &nbsp;  
+        span.label.label-warning Pastalar
     .row.list-group 
     .col-xs-12.col-sm-12
     .col-xs-12.list-group-item
       h4 
-        a(href="/mekan") Starbucks
+        a(href="/mekan") KFC
         small &nbsp;
         span.glyphicon.glyphicon-star
         span.glyphicon.glyphicon-star
@@ -36,11 +38,27 @@ block content
         span.glyphicon.glyphicon-star
         span.glyphicon.glyphicon-star-empty 
       span.badge.pull-right.badge-default 1km 
-      p.address SDÜ Batı Kampüsü
+      p.address Iyaş Avm
       p 
-        span.label.label-warning Mühendis Gençler
+        span.label.label-warning Tavuk
+        | &nbsp;  
+        span.label.label-warning Hamburger  
+    .row.list-group 
+    .col-xs-12.col-sm-12
+    .col-xs-12.list-group-item
+      h4 
+        a(href="/mekan") Sbarro
+        small &nbsp;
+        span.glyphicon.glyphicon-star
+        span.glyphicon.glyphicon-star
+        span.glyphicon.glyphicon-star
+        span.glyphicon.glyphicon-star
+        span.glyphicon.glyphicon-star-empty 
+      span.badge.pull-right.badge-default 1km 
+      p.address Iyaş Avm
+      p 
+        span.label.label-warning Pizza
         | &nbsp;
-        span.label.label-warning Mühendis Gençler
-      
+        
 
 
